# gnssparser

./: README.md  pyproject.toml
src/gnssparser/: parse_novatel.py  parse_septentrio.py  utils.py
